--- a/FFBatchConverter.Avalonia/Source/App.axaml
+++ b/FFBatchConverter.Avalonia/Source/App.axaml
@@ -6,6 +6,7 @@
 
     <Application.Styles>
         <FluentTheme />
+        <!-- <SimpleTheme /> -->
         <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
     </Application.Styles>
 </Application>
