Added settings mechanism and page, along with some basic data. Still have to wire it up to make it useful!

--- a/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
@@ -20,6 +20,8 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
+                <MenuItem Header="Settings" Click="MenuSettingsClick"></MenuItem>
+                <Separator />
                 <MenuItem Header="Exit" Command="{Binding MenuExit}" />
             </MenuItem>
             <MenuItem Header="View">
