--- a/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
@@ -3,8 +3,6 @@
         xmlns:vm="using:FFBatchConverter.Avalonia.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FFBatchConverter.Avalonia"
-        xmlns:views="clr-namespace:FFBatchConverter.Avalonia.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="FFBatchConverter.Avalonia.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -20,7 +18,7 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
-                <MenuItem Header="Settings" Click="MenuSettingsClick"></MenuItem>
+                <MenuItem Header="Settings" Click="MenuSettingsClick" />
                 <Separator />
                 <MenuItem Header="Exit" Command="{Binding MenuExit}" />
             </MenuItem>
