--- a/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
@@ -48,9 +48,9 @@
             </Panel>
 
             <!-- Control panel -->
-            <Panel Grid.Row="1" Margin="0, 0, 0, 0" Background="Aqua">
+            <Panel Grid.Row="1" Margin="0, 0, 0, 5" Background="Aqua">
                 <Grid ColumnDefinitions="*,200">
-                    <StackPanel Grid.Column="0" Background="Plum">
+                    <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Background="Plum">
                         <Grid ColumnDefinitions="150, 70, 126, 230, 100, 70">
                             <Label Grid.Column="0" VerticalAlignment="Center" Content="Concurrency" />
                             <TextBox Grid.Column="1" Text="{Binding Concurrency}" />
@@ -62,14 +62,6 @@
                             <TextBox Grid.Column="5" Text="{Binding Extension}" />
                         </Grid>
                         <Grid ColumnDefinitions="150, 600">
-                            <Label Grid.Column="0" VerticalAlignment="Center" Content="FFmpeg Path" />
-                            <TextBox Grid.Column="1" Text="{Binding FfmpegPath}" />
-                        </Grid>
-                        <Grid ColumnDefinitions="150, 600">
-                            <Label Grid.Column="0" VerticalAlignment="Center" Content="FFprobe Path" />
-                            <TextBox Grid.Column="1" Text="{Binding FfprobePath}" />
-                        </Grid>
-                        <Grid ColumnDefinitions="150, 600">
                             <Label Grid.Column="0" VerticalAlignment="Center" Content="Arguments" />
                             <TextBox Grid.Column="1" Text="{Binding Arguments}" />
                         </Grid>
@@ -77,7 +69,7 @@
 
 
                     <!-- Buttons -->
-                    <StackPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5">
+                    <StackPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                         <!-- Start/stop button -->
                         <Button
                             HorizontalAlignment="Right"
