Made settings window fixed-size.

--- a/FFBatchConverter.Avalonia/Source/Views/SettingsWindow.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/SettingsWindow.axaml
@@ -9,6 +9,7 @@
         x:Class="FFBatchConverter.Avalonia.Views.SettingsWindow"
         x:DataType="vm:SettingsWindowViewModel"
         Icon="/Source/Assets/avalonia-logo.ico"
+        CanResize="False"
         Title="Settings">
 
     <Window.Resources>
