Did the stuff that made a barebones version of the VMAF encoder work. Barely.

--- a/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
@@ -4,13 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="FFBatchConverter.Avalonia.Views.VMAFVideoEncoderView"
-        x:DataType="vm:VMAFVideoEncoderViewModel">
+        x:Class="FFBatchConverter.Avalonia.Views.BatchVMAFTargetEncoderView"
+        x:DataType="vm:BatchVMAFTargetEncoderViewModel">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:VMAFVideoEncoderViewModel/>
+        <vm:BatchVMAFTargetEncoderViewModel/>
     </Design.DataContext>
 
     <!-- <Label Content="Test Window" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Aqua" /> -->
