--- a/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
@@ -24,7 +24,7 @@
             </MenuItem>
             <MenuItem Header="View">
                 <MenuItem Header="Batch Converter" Command="{Binding MenuNavigateBatchVideoEncoder}" />
-                <MenuItem Header="VMAF Video Encoder" Command="{Binding MenuNavigateVMAFVideoEncoder}" />
+                <MenuItem Header="VMAF Target Encoder" Command="{Binding MenuNavigateVMAFVideoEncoder}" />
             </MenuItem>
         </Menu>
 
