--- a/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
@@ -20,7 +20,7 @@
 
     <UserControl>
         <Grid RowDefinitions="*, Auto">
-            <Panel Grid.Row="0" Background="Coral" DragDrop.AllowDrop="True">
+            <Panel Grid.Row="0" DragDrop.AllowDrop="True">
                 <DataGrid
                     IsReadOnly="True"
                     ItemsSource="{Binding TableRows}"
@@ -48,9 +48,9 @@
             </Panel>
 
             <!-- Control panel -->
-            <Panel Grid.Row="1" Margin="0, 0, 0, 5" Background="Aqua">
+            <Panel Grid.Row="1" Margin="0, 0, 0, 5">
                 <Grid ColumnDefinitions="*,200">
-                    <StackPanel Grid.Column="0" VerticalAlignment="Bottom" Background="Plum">
+                    <StackPanel Grid.Column="0" VerticalAlignment="Bottom">
                         <Grid ColumnDefinitions="150, 70, 126, 230, 100, 70">
                             <Label Grid.Column="0" VerticalAlignment="Center" Content="Concurrency" />
                             <TextBox Grid.Column="1" Text="{Binding Concurrency}" />
