Ok VMAF targeter should work now

--- a/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
@@ -39,6 +39,7 @@
                         <DataGridTextColumn Header="Range" Binding="{Binding Range}" />
                         <DataGridTextColumn Header="CRF" Binding="{Binding Crf}" />
                         <DataGridTextColumn Header="VMAF" Binding="{Binding Vmaf}" />
+                        <DataGridTextColumn Header="Phase" Binding="{Binding Phase}" />
                         <DataGridTextColumn Header="Status" Binding="{Binding Status}" />
                     </DataGrid.Columns>
 
