Added VMAF scorer, which processes a video and gives a VMAF score as well.

--- a/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/MainWindow.axaml
@@ -24,7 +24,8 @@
             </MenuItem>
             <MenuItem Header="View">
                 <MenuItem Header="Batch Converter" Command="{Binding MenuNavigateBatchVideoEncoder}" />
-                <MenuItem Header="VMAF Target Encoder" Command="{Binding MenuNavigateVMAFVideoEncoder}" />
+                <MenuItem Header="VMAF Encoder" Command="{Binding MenuNavigateVMAFVideoEncoder}" />
+                <MenuItem Header="VMAF Target Encoder" Command="{Binding MenuNavigateVMAFTargetVideoEncoder}" />
             </MenuItem>
         </Menu>
 
