--- a/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
@@ -44,6 +44,9 @@
                         <ContextMenu>
                             <MenuItem Header="Copy log" Click="CopyLogsMenuItemClicked" />
                             <MenuItem Header="Open log in text editor" Click="OpenLogsEditorMenuItemClicked" />
+                            <Separator />
+                            <MenuItem Header="Remove" Click="RemoveMenuItemClicked" />
+                            <MenuItem Header="Reset to pending" Click="ResetMenuItemClicked" />
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
