Added mechanism to reset a video encoder.

--- a/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVMAFTargetEncoderView.axaml
@@ -50,6 +50,7 @@
                             <MenuItem Header="Open log in text editor" Click="OpenLogsEditorMenuItemClicked" />
                             <Separator />
                             <MenuItem Header="Remove" Click="RemoveMenuItemClicked" />
+                            <MenuItem Header="Reset to pending" Click="ResetMenuItemClicked" />
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
