--- a/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
+++ b/FFBatchConverter.Avalonia/Source/Views/BatchVideoEncoderView.axaml
@@ -46,7 +46,7 @@
                             <MenuItem Header="Open log in text editor" Click="OpenLogsEditorMenuItemClicked" />
                             <Separator />
                             <MenuItem Header="Remove" Click="RemoveMenuItemClicked" />
-                            <!-- <MenuItem Header="Reset to pending" Click="ResetMenuItemClicked" /> -->
+                            <MenuItem Header="Reset to pending" Click="ResetMenuItemClicked" />
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
